fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1548,13 +1548,19 @@ body.no-scroll {
     }
 
     .hero__CTA {
-        width: 100%;
+        position: absolute;
+        top: calc(100vh/6 + 80% + 20px);
+        left: 50%;
+        transform: translateX(-50%);
+        width: 90%;
         max-width: 100%;
         padding: 20px 0;
         justify-content: center;
         align-items: center;
-        margin: auto auto 180px;
-        gap: 50px;
+        margin: 0;
+        gap: 30px;
+        bottom: auto;
+        flex-direction: column;
 
     }
 
@@ -1739,7 +1745,10 @@ body.no-scroll {
     }
 
     .hero__CTA {
-        padding: 15px;
+        top: calc(80px + 229px + 20px);
+        width: 85%;
+        gap: 20px;
+        padding: 15px 0;
     }
 
     .hero__photo {
@@ -1838,11 +1847,10 @@ body.no-scroll {
     }
 
     .hero__CTA {
-        padding: 15px 15px 20px;
+        top: calc(20px + 200px + 35px);
+        width: 90%;
+        padding: 15px 0;
         gap: 15px;
-        flex-direction: column;
-        justify-content: center;
-        margin-bottom: 15%;
     }
 
     .hero__title {
